Fixed Issue #20 - header on tablets and mobile fix

--- a/app/sites/all/themes/dtheme/sass/components/regions/_header.scss
+++ b/app/sites/all/themes/dtheme/sass/components/regions/_header.scss
@@ -3,6 +3,10 @@
   height: 100%;
   color: $color6;
 
+  @media (max-width: $screen-mobile-max2) {
+    background: none;
+  }
+
   a {
     color: $color6;
     text-decoration: none;
@@ -12,8 +16,6 @@
 
     overflow: hidden;
     text-align: center;
-
-
     position: relative;
 
     #header-bar-center {
@@ -39,18 +41,24 @@
       background: url(../images/header_logo.png) no-repeat top center;
       text-indent: -20000px;
       font-size: 0;
-      margin-top: -40px;
+//      margin-top: -40px;
 
       @media only screen and (max-width : $screen-mobile-max2 ) {
-        margin-top: 0;
+        margin-top: 20px;
         height: 160px;
-        background: url(../images/header_logo_to_767px.png) no-repeat top center;
+        background: url(../images/logo_mobile.png) no-repeat top center;
       }
 
       @media only screen and (min-width : $screen-tablet-min )and (max-width : $screen-tablet-max ) {
         margin-top: 0;
-        height: 160px;
-        background: url(../images/header_logo_to_767px.png) no-repeat top center; // TO DO
+        height: 150px;
+        background: url(../images/header_logo.png) no-repeat top center; // TO DO
+        background-size: contain;
+      }
+      @media only screen and (min-width : $screen-desktop-min ) and (max-width: $screen-desktop-mid) {
+        height: 250px;
+        background: url(../images/header_logo.png) no-repeat top center;
+        background-size: contain;
       }
     }
 
@@ -77,10 +85,11 @@
   height: 358px;
   @media (max-width: $screen-mobile-max2) {
     height: 205px;
-
+    background-size: cover;
   }
 
   @media only screen and (min-width : $screen-tablet-min )and (max-width : $screen-tablet-max ) {
+    background-size: cover;
     height: 227px;
   }
 
@@ -205,7 +214,7 @@
 
 
     #conference-statistics.header-bar-center-item {
-      margin-top: $screen-tablet-margin-top;
+      margin-top: 0;
       padding: 0;
       ul {
         padding: 0;
@@ -221,7 +230,7 @@
       width: auto;
       margin: auto;
 
-      margin-top: $screen-tablet-margin-top;
+      margin-top: 0;
       padding: 0;
       ul {
         padding: 0;
@@ -242,6 +251,7 @@
     display: table;
     width: 100%;
     height: 45px !important;
+    background: url("../images/header_bg_2.png") 0 0 repeat-x;
 
     #header-bar-center-text {
       display: table-row;
@@ -299,7 +309,7 @@
         ul {
           width: 100%;
           padding: 0;
-          padding-top: $padding_top_items;
+//          padding-top: $padding_top_items;
           li {
             display: none;
             padding: 0 5px 0 0;
@@ -323,7 +333,7 @@
         text-align: right;
         ul {
           padding: 0;
-          padding-top: $padding_top_items;
+          padding-top: 0;
 
           float: right;
           li {
