--- a/app/sites/all/themes/dtheme/sass/variables/_screen_sizes.scss
+++ b/app/sites/all/themes/dtheme/sass/variables/_screen_sizes.scss
@@ -10,5 +10,6 @@ $screen-tablet-min: 768px;
 $screen-tablet-max: 959px;
 
 $screen-desktop-min: 960px;
+$screen-desktop-mid: 1120px;
 $screen-desktop-max: $width-page;
 
